# Cpp-learn

Containers_Cpp/: Coda.cpp  Coda.h  Pila.cpp  Pila.h  a.out  exec  main.cpp
Containers_new_Cpp/: Exec  main.cpp
Cpp_Algebra/: exec  main.cpp
Cpp_BinarySearch/: exec  main.cpp
Cpp_CMake_tutorial/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_me.txt  exec  sample
Cpp_Concurrency/: exec  main_chap2.cpp  main_chap3.cpp
Cpp_DynMemoryTn/: trash.txt
Cpp_Eigen/: exec  main.cpp
Cpp_Exceptions/: main.cpp
Cpp_GenericPhilosophy/: exec  main.cpp  test.cpp
Cpp_GoogleStyle/: Help.cpp  exec  main.cpp
Cpp_Inheritance/: exec  main.cpp
Cpp_MapContainer/: exec  main.cpp
Cpp_MultiT/: exec  main.cpp
Cpp_Multiprocess/: ShaMem.c  ShaMem.cpp  exec  exec_sm  exec_test  main.cpp  pipe.cpp  test.cpp
Cpp_OOP_New/: Persona.cpp  Persona.h  Studente.cpp  Studente.h  exec  main.cpp
Cpp_OpenCV/: CMakeLists.txt  (+2 more)
PCL_Bunny/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  pcd_write
PCL_FullTutorial/: CMakeCache.txt  CMakeLists (Copia in conflitto di baiguera-Lenovo-Y520-15IKBN 2018-09-28).txt  CMakeLists.txt
PCL_FullTutorial/Data/: ciccio_maiale.txt  data_sections_0.txt  data_sections_1.txt  data_sections_2.txt  guess_plane_cloud.txt  sections_0.txt  sections_0_sections_1.txt  sections_1.txt  sections_2.txt  testWrapperI.txt  test_saveI.txt  text.txt
PCL_FullTutorial/include/: CloudWrapper.h  CloudWrapperTemplate.h  PlaneExWorker.h
PCL_FullTutorial/src/: CloudWrapper.cpp  CloudWrapperTemplate.cpp  PlaneExWorker.cpp  main.cpp
(+149 files in other folders)
